@@ -1,3 +1,14 @@
+2003-11-19  Alper Ersoy  <dirt@gtk.org>
+
+	* makeinfo/sectioning.c (get_sectioning_number): do not append space
+	with Docbook.
+	(sectioning_underscore): insert label attribute to make
+	distinction between chapter and unnumbered in Docbook.
+	(handle_enum_increment): also increment for Docbook.
+
+	* makeinfo/xml.c (xml_begin_index): remove label attribute from index
+	element.
+
 2003-11-18  Karl Berry  <karl@gnu.org>
 
 	* cmds.c (command_table): new commands @deftypecv, @deftypecvx.
